{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 44,
  "lineage": "27f3156f-d8f8-5630-d0a1-5e751afa4d27",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ebfd5b3428b6f4d",
            "arn": "arn:aws:ec2:us-east-1:150976179326:instance/i-01004218835822549",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01004218835822549",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f2a2d02020acfcb2",
            "private_dns": "ip-172-31-85-114.ec2.internal",
            "private_ip": "172.31.85.114",
            "public_dns": "ec2-52-90-93-165.compute-1.amazonaws.com",
            "public_ip": "52.90.93.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0341b5fee1346b64e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_sshs"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8c2233a2",
            "tags": {
              "Name": "dev0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-078a9d0f969c530de",
              "sg-0fc0e78f80b6e3a8b"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_sg",
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ebfd5b3428b6f4d",
            "arn": "arn:aws:ec2:us-east-1:150976179326:instance/i-0f7d59f2cbb93d623",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7d59f2cbb93d623",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-00131057e6cc73c3b",
            "private_dns": "ip-172-31-92-171.ec2.internal",
            "private_ip": "172.31.92.171",
            "public_dns": "ec2-3-93-10-238.compute-1.amazonaws.com",
            "public_ip": "3.93.10.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d55d49761e5e0568",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_sg",
              "allow_sshs"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8c2233a2",
            "tags": {
              "Name": "dev1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-078a9d0f969c530de",
              "sg-0fc0e78f80b6e3a8b"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_sg",
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150976179326:security-group/sg-0fc0e78f80b6e3a8b",
            "description": "allow_sg",
            "egress": [],
            "id": "sg-0fc0e78f80b6e3a8b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow_sg_ingress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-078a9d0f969c530de"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_sg",
            "name_prefix": null,
            "owner_id": "150976179326",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-5ba78021"
          },
          "dependencies": [
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150976179326:security-group/sg-078a9d0f969c530de",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-078a9d0f969c530de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_sshs",
            "name_prefix": null,
            "owner_id": "150976179326",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-5ba78021"
          }
        }
      ]
    }
  ]
}